--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -20,6 +22,7 @@
   },
   "dependencies": {
     "@koa/cors": "2",
+    "@spksoft/koa-decorator": "^1.2.1",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "gelf-pro": "^1.2.2",
