--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@koa/cors": "2",
-    "@spksoft/koa-decorator": "^1.2.1",
+    "@spksoft/koa-decorator": "^1.2.2",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "gelf-pro": "^1.2.2",
@@ -36,6 +36,7 @@
     "util": "^0.10.3",
     "winston": "^2.4.2",
     "winston-graylog2": "^1.0.0",
-    "winston-koa-logger": "^0.0.2"
+    "winston-koa-logger": "^0.0.2",
+    "yup": "^0.24.1"
   }
 }
