--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.0.17",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-timestamp": "^0.6.0",
     "stack-trace": "^0.0.10",
     "util": "^0.10.3",
     "winston": "^2.4.2",
