--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^22.4.3",
+    "mongodb-memory-server": "^1.7.3",
     "nodemon": "^1.17.4",
     "regenerator-runtime": "^0.11.1"
   },
