--- a/package.json
+++ b/package.json
@@ -9,20 +9,35 @@
     "start-dev": "DEBUG=koa*,worker,app* nodemon src/bootstrap.js --exec babel-node -e js",
     "clean": "rm -rf build && mkdir build",
     "build": "npm run clean && babel -d ./build ./src -s",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --fix"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "husky": "^0.14.3",
     "jest": "^22.4.3",
+    "lint-staged": "^7.1.0",
     "mongodb-memory-server": "^1.7.3",
     "nodemon": "^1.17.4",
+    "prettier": "^1.12.1",
     "regenerator-runtime": "^0.11.1"
   },
   "dependencies": {
@@ -48,5 +63,16 @@
     "winston-graylog2": "^1.0.0",
     "winston-koa-logger": "^0.0.2",
     "yup": "^0.24.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
