ESLint: Turn off space-before-function-paren

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
   },
   "rules": {
     "indent": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "space-before-function-paren": "off"
   }
 }
