--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
     "expect": true
   },
   "rules": {
-    "indent": "off"
+    "indent": "off",
+    "comma-dangle": "off",
+    "space-before-function-paren": "off"
   }
 }
