--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-new-service",
+  "name": "fleet-marketplace",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "flow-bin": "^0.72.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "lint-staged": "^7.1.0",
@@ -44,7 +46,7 @@
     "@koa/cors": "2",
     "@spksoft/koa-decorator": "^1.2.2",
     "@spksoft/koa-validator-decorator": "^1.0.0",
-    "@spksoft/mongoose-repository": "^1.0.0",
+    "@spksoft/mongoose-repository": "^1.0.5",
     "debug": "^3.1.0",
     "dotenv": "^5.0.1",
     "gelf-pro": "^1.2.2",
@@ -57,6 +59,7 @@
     "mongoose": "^5.0.17",
     "mongoose-paginate": "^5.0.3",
     "mongoose-timestamp": "^0.6.0",
+    "shortid": "^2.2.8",
     "stack-trace": "^0.0.10",
     "util": "^0.10.3",
     "winston": "^2.4.2",
