--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run start-dev",
-    "start-production": "npm run build && node build/bootstrap.js",
-    "start-dev": "DEBUG=koa*,worker,app* nodemon src/bootstrap.js --exec babel-node -e js",
+    "start-production": "npm run build && node build/index.js",
+    "start-dev": "DEBUG=koa*,worker,app* nodemon src/index.js --exec babel-node -e js",
     "clean": "rm -rf build && mkdir build",
     "build": "npm run clean && babel -d ./build ./src -s",
     "test": "jest",
@@ -17,12 +17,16 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
