add arrow-parens rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "indent": "off",
     "comma-dangle": ["warn", "always-multiline"],
     "import/newline-after-import": ["error", { "count": 1 }],
-    "space-before-function-paren": "off"
+    "space-before-function-paren": "off",
+    "arrow-parens": ["warn", "as-needed"]
   }
 }
