--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "fleet-marketplace",
+  "name": "node-api-boilerplate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npm run start-production",
-    "start-production": "npm run build && node build/index.js",
-    "start-dev": "DEBUG=koa*,worker,app* nodemon src/index.js --exec babel-node -e js",
-    "clean": "rm -rf build && mkdir build",
+    "start": "npm run build && node build/index.js",
+    "start:watch": "nodemon src/index.js --exec babel-node -e js",
+    "clean": "rm -rf build",
     "build": "npm run clean && babel -d ./build ./src -s",
     "test": "jest",
     "lint": "eslint . --fix"
@@ -38,48 +37,25 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "flow-bin": "^0.72.0",
-    "husky": "^0.14.3",
     "jest": "^22.4.3",
     "lint-staged": "^7.1.0",
-    "mongodb-memory-server": "^1.7.3",
-    "nodemon": "^1.17.4",
-    "prettier": "^1.12.1",
-    "regenerator-runtime": "^0.11.1"
+    "nodemon": "^1.19.0",
+    "prettier": "^1.17.1",
+    "regenerator-runtime": "^0.11.1",
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
-    "@koa/cors": "2",
-    "@spksoft/koa-decorator": "^1.2.2",
-    "@spksoft/koa-validator-decorator": "^1.0.0",
-    "@spksoft/mongoose-repository": "^1.0.5",
-    "debug": "^3.1.0",
-    "dotenv": "^5.0.1",
-    "gelf-pro": "^1.2.2",
-    "http-graceful-shutdown": "^2.1.1",
-    "koa": "^2.5.1",
-    "koa-bodyparser": "^4.2.0",
-    "koa-compress": "^3.0.0",
-    "koa-router": "^7.4.0",
-    "lodash": "^4.17.10",
-    "mongoose": "^5.0.17",
-    "mongoose-paginate": "^5.0.3",
-    "mongoose-timestamp": "^0.6.0",
-    "shortid": "^2.2.8",
-    "stack-trace": "^0.0.10",
-    "util": "^0.10.3",
-    "winston": "^2.4.2",
-    "winston-graylog2": "^1.0.0",
-    "winston-koa-logger": "^0.0.2",
-    "yup": "^0.24.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "@koa/cors": "3.0.0",
+    "@spksoft/koa-decorator": "1.2.2",
+    "@spksoft/mongoose-repository": "1.0.5",
+    "debug": "4.1.1",
+    "dotenv": "8.0.0",
+    "http-graceful-shutdown": "2.2.3",
+    "koa": "2.7.0",
+    "koa-bodyparser": "4.2.1",
+    "koa-compress": "3.0.0",
+    "koa-router": "7.4.0",
+    "mongoose": "5.5.8",
+    "sendit-mongoose-repository": "1.1.9"
   }
 }
