--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rm -rf build",
     "build": "npm run clean && babel -d ./build ./src -s",
     "test": "jest",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "reinstall": "rm -rf node_modules && npm install"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
