Add errors to global

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveTimeout": 1000,
   "prettier.eslintIntegration": true,
-  "javascript.validate.enable": false
+  "javascript.validate.enable": true
 }
