Add some setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "editor.formatOnSave": true,
   "editor.formatOnSaveTimeout": 1000,
   "prettier.eslintIntegration": true,
-  "javascript.validate.enable": true
+  "javascript.validate.enable": true,
+  "editor.tabSize": 2,
+  "files.trimTrailingWhitespace": true
 }
