--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "@koa/cors": "3.0.0",
     "@spksoft/koa-decorator": "1.2.2",
     "@spksoft/mongoose-repository": "1.0.5",
+    "bunyan": "^1.8.12",
+    "bunyan-format": "^0.2.1",
     "debug": "4.1.1",
+    "dev-null": "^0.1.1",
     "dotenv": "8.0.0",
     "http-graceful-shutdown": "2.2.3",
     "koa": "2.7.0",
