--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-DB_URI=testing
-EXAMPLE_TOKEN=hello world
-NODE_ENV=development
-PROJECT_NAME=testing_new_api
-PORT=8080
-
-GRAYLOG_ERROR_STACK=true
-RESPONSE_ERROR_STACK=true
+NODE_ENV=local
+LOGGER_DISABLED=
+LOGGER_FORMAT=true
+LOGGER_DEBUG=true
+KOA_HOST=0.0.0.0
+KOA_PORT=3000
