--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
-    "flow-bin": "^0.72.0",
+    "flow-bin": "0.98.1",
     "jest": "^22.4.3",
     "lint-staged": "^7.1.0",
     "nodemon": "^1.19.0",
