Load env on script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run build && node build/index.js",
-    "start:watch": "nodemon src/index.js --exec babel-node -e js",
+    "start:watch": "nodemon src/index.js --exec \"node -r 'dotenv/config' -r 'babel-register'\"",
     "clean": "rm -rf build",
     "build": "npm run clean && babel -d ./build ./src -s",
     "test": "jest",
@@ -26,6 +26,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "dotenv": "8.0.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -53,7 +54,6 @@
     "bunyan-format": "^0.2.1",
     "debug": "4.1.1",
     "dev-null": "^0.1.1",
-    "dotenv": "8.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "http-graceful-shutdown": "2.2.3",
     "koa": "2.7.0",
