--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "import/prefer-default-export": "off",
     "flowtype/define-flow-type": 1,
     "space-before-function-paren": "off",
-    "arrow-parens": ["warn", "as-needed"]
+    "arrow-parens": ["warn", "as-needed"],
+    "class-methods-use-this": "off"
   }
 }
