--- a/package.json
+++ b/package.json
@@ -13,54 +13,53 @@
     "reinstall": "rm -rf node_modules && npm install"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.3",
+    "babel-jest": "22.4.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-decorators": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-flow": "6.23.0",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-runtime": "6.26.0",
     "dotenv": "8.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-config-standard": "11.0.0",
+    "eslint-plugin-babel": "5.1.0",
+    "eslint-plugin-flowtype": "2.46.3",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-standard": "3.1.0",
     "flow-bin": "0.98.1",
-    "jest": "^22.4.3",
-    "lint-staged": "^7.1.0",
-    "nodemon": "^1.19.0",
-    "prettier": "^1.17.1",
-    "regenerator-runtime": "^0.11.1",
-    "rimraf": "^2.6.3"
+    "jest": "22.4.3",
+    "lint-staged": "7.1.0",
+    "nodemon": "1.19.0",
+    "prettier": "1.17.1",
+    "regenerator-runtime": "0.11.1",
+    "rimraf": "2.6.3"
   },
   "dependencies": {
     "@koa/cors": "3.0.0",
     "@spksoft/koa-decorator": "1.2.2",
-    "@spksoft/mongoose-repository": "1.0.5",
-    "babel-polyfill": "^6.26.0",
-    "bunyan": "^1.8.12",
-    "bunyan-format": "^0.2.1",
-    "debug": "4.1.1",
-    "dev-null": "^0.1.1",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "babel-polyfill": "6.26.0",
+    "bunyan": "1.8.12",
+    "bunyan-format": "0.2.1",
+    "dev-null": "0.1.1",
     "http-graceful-shutdown": "2.2.3",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compress": "3.0.0",
     "koa-router": "7.4.0",
     "mongoose": "5.5.8",
+    "ramda": "0.26.1",
     "sendit-mongoose-repository": "1.1.9"
   }
 }
