--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "koa-router": "7.4.0",
     "mongoose": "5.5.8",
     "ramda": "0.26.1",
-    "sendit-mongoose-repository": "1.1.9"
+    "sendit-mongoose-repository": "1.1.9",
+    "uuid": "^3.3.2"
   }
 }
