--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "bunyan": "1.8.12",
     "bunyan-format": "0.2.1",
     "dev-null": "0.1.1",
+    "elasticsearch": "^16.0.0",
     "http-graceful-shutdown": "2.2.3",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
