Add address service

--- a/package.json
+++ b/package.json
@@ -49,19 +49,21 @@
   "dependencies": {
     "@koa/cors": "3.0.0",
     "@spksoft/koa-decorator": "1.2.2",
+    "axios": "0.18.0",
     "babel-polyfill": "6.26.0",
     "bluebird": "3.5.4",
     "bunyan": "1.8.12",
     "bunyan-format": "0.2.1",
     "dev-null": "0.1.1",
-    "elasticsearch": "^16.0.0",
-    "fs-extra": "^8.0.1",
+    "elasticsearch": "16.0.0",
+    "fs-extra": "8.0.1",
     "http-graceful-shutdown": "2.2.3",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compress": "3.0.0",
     "koa-router": "7.4.0",
     "mongoose": "5.5.8",
+    "qs": "^6.7.0",
     "ramda": "0.26.1",
     "rascal": "4.4.0",
     "redis": "2.8.0",
