--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "node-api-boilerplate",
+  "description": "A node boilerplate using KOA",
   "version": "1.0.0",
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
     "start": "npm run build && node build/index.js",
     "start:watch": "nodemon src/index.js --exec \"node -r 'dotenv/config' -r 'babel-register'\"",
+    "start:docker": "npm run build:docker --no-cache && docker run -p 3000:3000 $npm_package_name:local",
     "clean": "rm -rf build",
     "build": "npm run clean && babel -d ./build ./src -s",
+    "build:docker": "docker build -t $npm_package_name:local ./",
     "test": "jest",
     "lint": "eslint . --fix",
     "reinstall": "rm -rf node_modules && npm install"
