--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,32 @@
 NODE_ENV=local
+HOSTNAME=MY_DEV_MACHINE
+
 LOGGER_DISABLED=
-LOGGER_FORMAT=true
+LOGGER_FORMAT=
 LOGGER_DEBUG=true
+
 KOA_HOST=0.0.0.0
 KOA_PORT=3000
+KOA_STACK=true
+KOA_DEBUG=true
+KOA_ACCESS_LOGS=true
+KOA_NAMESPACE=
+
+REDIS_HOST=
+REDIS_ENABLED=
+
+RASCAL_ENABLED=
+AMQP_URLS=
+
+ADDRESS_BASE_URL=
+ADDRESS_AUTHORITIES=
+
+CONDUCTOR_BASEURL=
+CONDUCTOR_ENABLED=
+
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_AUTH=
+ELASTICSEARCH_API_VERSION=
+
+MONGODB_ENABLED=
+MONGODB_URL=
