--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf build",
     "build": "npm run clean && babel -d ./build ./src -s",
     "build:docker": "docker build -t $npm_package_name:local ./",
-    "test": "jest",
+    "test": "jest --config ./jest.config.json",
     "lint": "eslint . --fix",
     "reinstall": "rm -rf node_modules && npm install"
   },
