--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "automock": false,
   "testEnvironment": "node",
-  "verbose": true
+  "verbose": true,
+  "testPathIgnorePatterns": ["/node_modules/", "/build/"]
 }
