use @sendit-th/koa-decorator

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@koa/cors": "3.0.0",
-    "@spksoft/koa-decorator": "1.2.2",
+    "@sendit-th/koa-decorator": "2.3.0",
     "axios": "0.18.0",
     "babel-polyfill": "6.26.0",
     "bluebird": "3.5.4",
